# c2amqp-adaptor

./: .gitmodules  CMakeLists.txt  Dockerfile  README  demo_run.sh
cmake/modules/: Findpistache.cmake
include/: adaptor.h  qpid_proton.h  thread_pool.h  ts_queue.h
src/: CMakeLists.txt  adaptor.cc  adaptor.h  broker.cpp  main.cc  qpid_proton.cc  qpid_proton.h  simple_recv.cpp  ts_queue.h
test/: Dockerfile  async_test.sh  setup_test.sh
